fixed bug, flicker of image on mouse over in category page

--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -52,9 +52,9 @@
     width: 100%;
 }
 
-.image-1:hover {
+/* .image-1:hover {
     display: none;
-}
+} */
 
 /* .product-image-container + img:hover {
     display: none;
